--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,4 +19,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/recipes.json
+    - assets/jsons/recipes.json
+    - assets/images/
